--- a/main.css
+++ b/main.css
@@ -1,111 +1,69 @@
-/* custom property */
-:root {
-	--accent-color: #800000;  /* could also be coded #800 */
-	--gradient-color: #f6bb73;
-}
-
-/* reset */
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-/* default styles */
 body {
-  width: 80%;
-  max-width: 1024px;
-  margin: 0 auto;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: calc(0.9em + 0.2vw);
-  line-height: 1.5;
-  color: #333;
-}
-
-h1, h2, h3, p, ul {
-  padding-top: 0.25em;
-  padding-bottom: 0.25em;
+    width: 80%;
+    max-width: 1024px;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
 }
 
 header {
-  text-align: center;
-  line-height: 1.2;
-  border-bottom: 3px solid #333;
-  padding-bottom: 1em;
+    text-align: center;
+    line-height: 1.2;
+    padding: 1em 0;
 }
 
 header img {
-  min-width: 40px;
-  max-width: 80px;
-  width: 100%;
+    min-width: 40px;
+    max-width: 80px;
+    width: 100%;
 }
 
-footer {
-  text-align: center;
-  border-top: 3px solid #333;
-  margin-top: 1.5em;
-  padding: 1em 0;
-  font-size: 0.9em;
-}
-
-/* ========== FLEXBOX LAYOUT ========== */
 main {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1em;
-  margin-top: 1em;
+    display: grid;
+    grid-template-columns: 25% 75%;
+    gap: 20px;
 }
 
-main aside {
-  flex-basis: 25%;
-  padding: 1em;
-  background-color: #f8f8f8;
-  box-sizing: border-box;
-}
-
-main section {
-  flex-basis: 75%;
-  padding: 1em;
-  box-sizing: border-box;
-}
-
-/* ========== FEATURED SPEAKER ========== */
-.featured {
-  border-top: 3px solid #333;
-  border-bottom: 3px solid #333;
-  padding: 1em 0;
-  margin-top: 1em;
-}
-
-main section img {
-  float: right;
-  margin-left: 1em;
-  max-width: 100%;
-  height: auto;
-}
-
-/* ========== IMAGE SCALING ========== */
-/* Guest speaker images */
+/* Left Column */
 aside img {
-  width: 100%;
-  min-width: 40px;
-  max-width: 75px;
-  margin-bottom: 1em;
+    min-width: 40px;
+    max-width: 75px;
+    width: 100%;
+    margin-bottom: .25em;
 }
 
-/* Featured speaker image */
+/* Right Column */
+.featured-title {
+    border-top: 2px solid #999;
+    border-bottom: 2px solid #999;
+    padding: .25em 0;
+    margin: 1em 0;
+}
+
 .featured img {
-  width: 100%;
-  min-width: 100px;
-  max-width: 250px;
+    float: right;
+    min-width: 100px;
+    max-width: 250px;
+    width: 100%;
+    margin-left: 1em;
 }
 
-/* ========== LINKS ========== */
-a {
-  color: #0077cc;
-  text-decoration: none;
+blockquote {
+    font-style: italic;
+    margin: .5em 0;
 }
 
-a:hover {
-  text-decoration: underline;
+/* Footer */
+footer {
+    text-align: center;
+    font-size: .9em;
+    color: #444;
+    margin: 1em 0;
+}
+
+/* Responsive */
+@media (max-width: 700px) {
+    main {
+        grid-template-columns: 1fr;
+    }
 }
